# note-maker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _main.py  build_native.py  config_helpers.py  docker-compose.yml  main_desktop.py  note_maker.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py  setup_cli.py  verify_config.py
.github/workflows/: build.yml  ci.yml
docs/: ROADMAP.md
note_maker/: __init__.py  core.py  server.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_config_helpers.py  test_core.py  test_smoke.py
